# pollutionclient_rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  sample.json
src/: lib.rs  main.rs
