[package]
name = "pollutionclient_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
ureq = { version = "2.8.0", features = ["json", "serde_json", "serde"] }
influxdb = { version = "0.7.1", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt"] }